--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,8 @@ esp-hal-embassy  = { version = "0.4.0",  features = ["esp32c3"] }
 static_cell      = { version = "2.1.0",  features = ["nightly"] }
 picoserve = { version = "0.12.2", features = ["embassy", "alloc"] }
 embassy-sync = "0.6.0"
+wot-td = { version = "0.6.1", default-features = false, features = ["alloc"], git = "https://github.com/wot-rust/wot-td" }
+serde_json = { version = "1.0.133", default-features = false, features = ["alloc"] }
 
 [profile.dev]
 # Rust debug is too slow.
