--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
 log = { version = "0.4.21" }
 esp-alloc = { version = "0.5.0" }
 embedded-io = "0.6.1"
+shtcx = "1.0.0"
 
 embedded-io-async = "0.6.1"
 embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
