--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ embassy-time     = { version = "0.3.1",  features = ["generic-queue-8"] }
 esp-hal-embassy  = { version = "0.4.0",  features = ["esp32c3"] }
 static_cell      = { version = "2.1.0",  features = ["nightly"] }
 picoserve = { version = "0.12.2", features = ["embassy"] }
+embassy-sync = "0.6.0"
 
 [profile.dev]
 # Rust debug is too slow.
