--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ embassy-executor = { version = "0.6.0",  features = [
 embassy-time     = { version = "0.3.1",  features = ["generic-queue-8"] }
 esp-hal-embassy  = { version = "0.4.0",  features = ["esp32c3"] }
 static_cell      = { version = "2.1.0",  features = ["nightly"] }
-picoserve = { version = "0.12.2", features = ["embassy"] }
+picoserve = { version = "0.12.2", features = ["embassy", "alloc"] }
 embassy-sync = "0.6.0"
 
 [profile.dev]
