--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,7 @@ esp-backtrace = { version = "0.14.1", features = [
     "println",
 ]}
 
-esp-hal = { version = "0.21.0", features = [
-    "esp32c3",
-] }
+esp-hal = { version = "0.22.0", features = ["esp32c3"] }
 esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
 log = { version = "0.4.21" }
 esp-alloc = { version = "0.5.0" }
@@ -25,17 +23,7 @@ shtcx = "1.0.0"
 embedded-io-async = "0.6.1"
 embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
 
-esp-wifi = { version = "0.10.1", default-features=false, features = [
-    "esp32c3",
-    "phy-enable-usb",
-    "utils",
-    "wifi",
-    "wifi-default",
-    "esp-alloc",
-    "log",
-    "async",
-    "embassy-net",
-] }
+esp-wifi = { version = "0.11.0", default-features = false, features = ["esp32c3", "utils", "wifi", "esp-alloc", "log"] }
 heapless = { version = "0.8.0", default-features = false }
 smoltcp = { version = "0.11.0", default-features = false, features = [
     "medium-ethernet",
@@ -52,11 +40,11 @@ embassy-executor = { version = "0.6.0",  features = [
     "task-arena-size-12288",
 ] }
 embassy-time     = { version = "0.3.1",  features = ["generic-queue-8"] }
-esp-hal-embassy  = { version = "0.4.0",  features = ["esp32c3"] }
+esp-hal-embassy  = { version = "0.5.0",  features = ["esp32c3"] }
 static_cell      = { version = "2.1.0",  features = ["nightly"] }
 picoserve = { version = "0.12.2", features = ["embassy", "alloc"] }
 embassy-sync = "0.6.0"
-wot-td = { version = "0.6.1", default-features = false, features = ["alloc"], git = "https://github.com/wot-rust/wot-td" }
+wot-td = { version = "0.6.2", default-features = false, features = ["alloc"] }
 serde_json = { version = "1.0.133", default-features = false, features = ["alloc"] }
 
 [profile.dev]
