chore(deps): add const-random crate as a dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,11 @@ embassy-sync = "0.6.0"
 wot-td = { version = "0.6.2", default-features = false, features = ["alloc"] }
 serde_json = { version = "1.0.133", default-features = false, features = ["alloc"] }
 uuid = { version = "1.11.0", default-features = false }
+const-random = "0.1.15"
+
+[patch.crates-io]
+# TODO: Remove this override once https://github.com/tkaitchuck/constrandom/issues/36 has been resolved
+const-random-macro = { git = 'https://github.com/tkaitchuck/constrandom.git', rev = "4f71cb510e77eb6a26f8c7296c17811d0416fd41"}
 
 [profile.dev]
 # Rust debug is too slow.
