feat: allow the use of a uuid urn as device ID in TD

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,10 @@ const-random = "0.1.15"
 # TODO: Remove this override once https://github.com/tkaitchuck/constrandom/issues/36 has been resolved
 const-random-macro = { git = 'https://github.com/tkaitchuck/constrandom.git', rev = "4f71cb510e77eb6a26f8c7296c17811d0416fd41"}
 
+[features]
+default = ["uuid-id"]
+uuid-id = []
+
 [profile.dev]
 # Rust debug is too slow.
 # For debug builds always builds with some optimization
