--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,12 +42,15 @@ embassy-executor = { version = "0.6.0",  features = [
 embassy-time     = { version = "0.3.1",  features = ["generic-queue-8"] }
 esp-hal-embassy  = { version = "0.5.0",  features = ["esp32c3"] }
 static_cell      = { version = "2.1.0",  features = ["nightly"] }
-picoserve = { version = "0.12.2", features = ["embassy", "alloc"] }
+picoserve = { version = "0.12.3", features = ["embassy", "alloc"] }
 embassy-sync = "0.6.0"
 wot-td = { version = "0.6.2", default-features = false, features = ["alloc"] }
 serde_json = { version = "1.0.133", default-features = false, features = ["alloc"] }
 uuid = { version = "1.11.0", default-features = false }
 const-random = "0.1.15"
+smart-leds-trait = { version = "0.3.0", features = ["serde"] }
+smart-leds = { version = "0.4.0", features = ["serde"] }
+serde = { version = "1.0.215", default-features = false, features = ["alloc"] }
 
 [patch.crates-io]
 # TODO: Remove this override once https://github.com/tkaitchuck/constrandom/issues/36 has been resolved
