--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ const-random = "0.1.15"
 smart-leds-trait = { version = "0.3.0", features = ["serde"] }
 smart-leds = { version = "0.4.0", features = ["serde"] }
 serde = { version = "1.0.215", default-features = false, features = ["alloc"] }
+portable-atomic = { version = "1.10.0", default-features = false }
 
 [patch.crates-io]
 # TODO: Remove this override once https://github.com/tkaitchuck/constrandom/issues/36 has been resolved
