--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,28 +21,37 @@ embedded-io = "0.6.1"
 shtcx = "1.0.0"
 
 embedded-io-async = "0.6.1"
-embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
+embassy-net = { version = "0.5.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
 
 esp-wifi = { version = "0.11.0", default-features = false, features = ["esp32c3", "utils", "wifi", "esp-alloc", "log"] }
 heapless = { version = "0.8.0", default-features = false }
-smoltcp = { version = "0.11.0", default-features = false, features = [
+smoltcp_011 = { version = "0.11.0", default-features = false, features = [
     "medium-ethernet",
     "proto-dhcpv4",
-    "proto-igmp",
     "proto-ipv4",
     "socket-dhcpv4",
     "socket-icmp",
     "socket-raw",
     "socket-tcp",
     "socket-udp",
-] }
+], package = "smoltcp" }
+smoltcp_012 = { version = "0.12.0", default-features = false, features = [
+    "medium-ethernet",
+    "proto-dhcpv4",
+    "proto-ipv4",
+    "socket-dhcpv4",
+    "socket-icmp",
+    "socket-raw",
+    "socket-tcp",
+    "socket-udp",
+], package = "smoltcp" }
 embassy-executor = { version = "0.6.0",  features = [
     "task-arena-size-12288",
 ] }
 embassy-time     = { version = "0.3.1",  features = ["generic-queue-8"] }
 esp-hal-embassy  = { version = "0.5.0",  features = ["esp32c3"] }
 static_cell      = { version = "2.1.0",  features = ["nightly"] }
-picoserve = { version = "0.12.3", features = ["embassy", "alloc"] }
+picoserve = { version = "0.13.0", features = ["embassy", "alloc"] }
 embassy-sync = "0.6.0"
 wot-td = { version = "0.6.2", default-features = false, features = ["alloc"] }
 serde_json = { version = "1.0.133", default-features = false, features = ["alloc"] }
