--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,26 +6,26 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-esp-backtrace = { version = "0.14.1", features = [
+esp-backtrace = { version = "0.15.0", features = [
     "esp32c3",
     "exception-handler",
     "panic-handler",
     "println",
 ]}
 
-esp-hal = { version = "0.22.0", features = ["esp32c3"] }
-esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
+esp-hal = { version = "0.23.1", features = ["esp32c3"] }
+esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
 log = { version = "0.4.21" }
-esp-alloc = { version = "0.5.0" }
+esp-alloc = { version = "0.6.0" }
 embedded-io = "0.6.1"
 shtcx = "1.0.0"
 
 embedded-io-async = "0.6.1"
-embassy-net = { version = "0.5.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
+embassy-net = { version = "0.6.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
 
-esp-wifi = { version = "0.11.0", default-features = false, features = ["esp32c3", "utils", "wifi", "esp-alloc", "log"] }
+esp-wifi = { version = "0.12.0", default-features = false, features = ["esp32c3", "utils", "wifi", "esp-alloc", "log"] }
 heapless = { version = "0.8.0", default-features = false }
-smoltcp_011 = { version = "0.11.0", default-features = false, features = [
+smoltcp = { version = "0.12.0", default-features = false, features = [
     "medium-ethernet",
     "proto-dhcpv4",
     "proto-ipv4",
@@ -34,23 +34,13 @@ smoltcp_011 = { version = "0.11.0", default-features = false, features = [
     "socket-raw",
     "socket-tcp",
     "socket-udp",
-], package = "smoltcp" }
-smoltcp_012 = { version = "0.12.0", default-features = false, features = [
-    "medium-ethernet",
-    "proto-dhcpv4",
-    "proto-ipv4",
-    "socket-dhcpv4",
-    "socket-icmp",
-    "socket-raw",
-    "socket-tcp",
-    "socket-udp",
-], package = "smoltcp" }
-embassy-executor = { version = "0.6.0",  features = ["nightly"] }
-embassy-time     = { version = "0.3.1",  features = ["generic-queue-8"] }
-esp-hal-embassy  = { version = "0.5.0",  features = ["esp32c3"] }
+] }
+embassy-executor = { version = "0.7.0",  features = ["nightly"] }
+embassy-time     = { version = "0.4.0",  features = ["generic-queue-8"] }
+esp-hal-embassy  = { version = "0.6.0",  features = ["esp32c3"] }
 static_cell      = { version = "2.1.0",  features = ["nightly"] }
-picoserve = { version = "0.13.2", features = ["embassy", "alloc"] }
-embassy-sync = "0.6.0"
+picoserve = { version = "0.13.3", features = ["embassy", "alloc"] }
+embassy-sync = "0.6.2"
 wot-td = { version = "0.6.2", default-features = false, features = ["alloc"] }
 serde_json = { version = "1.0.133", default-features = false, features = ["alloc"] }
 uuid = { version = "1.11.0", default-features = false }
@@ -59,10 +49,12 @@ smart-leds-trait = { version = "0.3.0", features = ["serde"] }
 smart-leds = { version = "0.4.0", features = ["serde"] }
 serde = { version = "1.0.215", default-features = false, features = ["alloc"] }
 portable-atomic = { version = "1.10.0", default-features = false }
-edge-nal = "0.4.0"
-edge-nal-embassy = "0.4.0"
-edge-mdns = "0.4.0"
+edge-nal = "0.5.0"
+edge-nal-embassy = "0.5.0"
+edge-mdns = "0.5.0"
 
+[patch.crates-io]
+picoserve = { git = "https://github.com/lu-zero/picoserve", branch = "embassy-net-0.6" }
 
 [features]
 default = ["uuid-id"]
