--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,10 +37,11 @@ smoltcp = { version = "0.12.0", default-features = false, features = [
 ] }
 embassy-executor = { version = "0.7.0",  features = ["nightly"] }
 embassy-time     = { version = "0.4.0",  features = ["generic-queue-8"] }
+embassy-futures = "0.1.1"
+embassy-sync = "0.6.2"
 esp-hal-embassy  = { version = "0.6.0",  features = ["esp32c3"] }
 static_cell      = { version = "2.1.0",  features = ["nightly"] }
 picoserve = { version = "0.13.3", features = ["embassy", "alloc"] }
-embassy-sync = "0.6.2"
 wot-td = { version = "0.6.2", default-features = false, features = ["alloc"] }
 serde_json = { version = "1.0.133", default-features = false, features = ["alloc"] }
 uuid = { version = "1.11.0", default-features = false }
@@ -73,3 +74,6 @@ incremental = false
 lto = 'fat'
 opt-level = 's'
 overflow-checks = false
+
+[lints.clippy]
+pedantic = "deny"
