--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,17 +13,24 @@ esp-backtrace = { version = "0.15.0", features = [
     "println",
 ]}
 
-esp-hal = { version = "0.23.1", features = ["esp32c3"] }
-esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
+esp-hal = { version = "1.0.0-beta.0", features = ["esp32c3", "unstable"] }
+esp-println = { version = "0.13.1", features = ["esp32c3", "log"] }
 log = { version = "0.4.21" }
-esp-alloc = { version = "0.6.0" }
+esp-alloc = { version = "0.7.0" }
 embedded-io = "0.6.1"
 shtcx = "1.0.0"
 
 embedded-io-async = "0.6.1"
 embassy-net = { version = "0.6.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
 
-esp-wifi = { version = "0.12.0", default-features = false, features = ["esp32c3", "utils", "wifi", "esp-alloc", "log"] }
+esp-wifi = { version = "0.13.0", default-features = false, features = [
+  "builtin-scheduler",
+  "esp-alloc",
+  "esp32c3",
+  "log",
+  "wifi",
+  "esp32c3"
+] }
 heapless = { version = "0.8.0", default-features = false }
 smoltcp = { version = "0.12.0", default-features = false, features = [
     "medium-ethernet",
@@ -39,7 +46,7 @@ embassy-executor = { version = "0.7.0",  features = ["nightly"] }
 embassy-time     = { version = "0.4.0",  features = ["generic-queue-8"] }
 embassy-futures = "0.1.1"
 embassy-sync = "0.6.2"
-esp-hal-embassy  = { version = "0.6.0",  features = ["esp32c3"] }
+esp-hal-embassy  = { version = "0.7.0",  features = ["esp32c3"] }
 static_cell      = { version = "2.1.0",  features = ["nightly"] }
 picoserve = { version = "0.15.1", features = ["embassy", "alloc"] }
 wot-td = { version = "0.6.2", default-features = false, features = ["alloc"] }
